--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "canary"
   },
   "scripts": {
     "start": "react-scripts start",
